force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/NCMT_TCO_Additional_Cost__c.object-meta.xml
<CustomObject>
    <label>TCO Additional Cost</label>
    <nameField>
        <displayFormat>AC-{000}</displayFormat>
        <label>TCO Additional Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCO Additional Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>