force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/fields/Building_shell_cleaning__c.field-meta.xml
<CustomField>
    <fullName>Building_shell_cleaning__c</fullName>
    <label>Building Shell Cleaning Cost/Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>