force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/fields/Building_supplies__c.field-meta.xml
<CustomField>
    <fullName>Building_supplies__c</fullName>
    <label>Building Supplies Cost/Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>