force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/fields/Comments_AnnualCost_Changes__c.field-meta.xml
<CustomField>
    <fullName>Comments_AnnualCost_Changes__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>