force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/fields/Electricity_Grid__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Grid__c</fullName>
    <label>Electricity – Grid (kWh)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>