force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/fields/Janitorial_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Janitorial_Cleaning__c</fullName>
    <label>Janitorial/Cleaning Cost/Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>