force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/fields/Landscape_and_site_maintenance__c.field-meta.xml
<CustomField>
    <fullName>Landscape_and_site_maintenance__c</fullName>
    <label>Landscape And Site Maintenance Cost/Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>