force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/fields/Minor_repairs__c.field-meta.xml
<CustomField>
    <fullName>Minor_repairs__c</fullName>
    <label>Minor Repairs Cost/Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>