force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/fields/Other_Heating__c.field-meta.xml
<CustomField>
    <fullName>Other_Heating__c</fullName>
    <label>Other Heating (kBtu)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>