force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>TCO Additional Cost</relationshipLabel>
    <relationshipName>TCO_Additional_Cost</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>