force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/fields/TCO_Project_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>TCO_Project_Cost_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCO Project Cost Rate</label>
    <referenceTo>NCMT_Project_Cost_Rate__c</referenceTo>
    <relationshipLabel>TCO Additional Cost</relationshipLabel>
    <relationshipName>TCO_Additional_Cost</relationshipName>
    <type>Lookup</type>
</CustomField>