force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/validationRules/Check_for_UitilityImpact_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_UitilityImpact_Changes</fullName>
    <active>true</active>
    <errorConditionFormula>(NOT(ISBLANK(Electricity_Grid__c)) ||
NOT(ISBLANK(Other_Heating__c)) ||
NOT(ISBLANK(Gas__c))) &amp;&amp;  ISBLANK(Comments_UitlityImpact_Changes__c)</errorConditionFormula>
    <errorDisplayField>Comments_UitlityImpact_Changes__c</errorDisplayField>
    <errorMessage>Please enter Comments.</errorMessage>
</ValidationRule>