force-app/main/default/objects/NCMT_TCO_Additional_Cost__c/validationRules/Check_for_WaterImpact_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_WaterImpact_Changes</fullName>
    <active>true</active>
    <errorConditionFormula>(NOT(ISBLANK(Non_potable_water__c)) ||
NOT(ISBLANK(Water__c)) ||
NOT(ISBLANK(Sewer_kgal__c))) &amp;&amp; ISBLANK( Comments_WaterImpact_Changes__c)</errorConditionFormula>
    <errorDisplayField>Comments_WaterImpact_Changes__c</errorDisplayField>
    <errorMessage>Please enter Comments</errorMessage>
</ValidationRule>